style.css
*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

:root {
    --primary-blue: rgb(0, 0, 150);
    --primary-orange: rgb(255, 193, 58);
    --primary-pink: rgb(255, 25, 163);
    --primary-light-text: rgb(255, 193, 58);
    --primary-dark-text: rgb(0, 0, 150);
}

body {
    min-height: 100dvh;
    display: flex;
    flex-direction: column;
}

.main {
    flex: 1;
    display: grid;
    grid-template-columns: 4fr 1fr;
    grid-template-areas: 
        "game-display side-panel"
    ;
}

h1 {
    color: var(--primary-dark-text);
    background-color: var(--primary-orange);
    padding: 20px 0;
    text-align: center;
    text-transform: uppercase;
    text-shadow: 2px 1px 0 var(--primary-pink);
    font-size: 2.5rem;
    border-bottom: 3px solid black;
}

.game-display {
    grid-area: game-display;
    background-color: var(--primary-blue);
    display: flex;
    justify-content: center;
    align-items: flex-start;
    padding: 10vh 0;
    border-right: 3px solid black;
}

.buttons-container {
    grid-area: side-panel;
    display: flex;
    flex-direction: column;
    gap: 15px;
    padding: 10vh 20px;
    background-color: var(--primary-pink);

    button {
        font-size: 1.1rem;
        padding: 0.5rem 0;
        min-height: 2em;
        background-color: rgb(0, 0, 110);
        color: var(--primary-light-text);
        border: none;
        border-radius: 10px;
        border-right: 5px solid black;
        border-bottom: 5px solid black;
    }

    button:hover {
        box-shadow: 0 0 5px black;
    }
}

dialog {
    margin: auto;
    border-radius: 10px;
    border: none;
}

dialog::backdrop {
    backdrop-filter: blur(2px);
}

dialog form {
    border-radius: 10px;
    padding: 15px;
    border-radius: 10px;
}

form {
    p {
        display: flex;
        flex-direction: column;
        margin: 18px 0;
        gap: 5px;
        font-size: 0.8rem;
    }

    button {
        width: 100%;
        background-color: var(--primary-pink);
        color: white;
        font-weight: 800;
        padding: 5px 0;
        border: none;
        border-radius: 5px;
    }

    input:user-invalid {
        border: 1px solid red;
    }

    input {
        height: 1.1rem;
    }

    button:hover {
        box-shadow: 0 0 200px rgba(0, 0, 0, 0.227) inset;
    }
}

.game-display > .board {
    background-color: var(--primary-pink);
    width: min(800px, 60%);
    height: clamp(40px, auto, 500px);
    gap: 1px;
    overflow: auto;
    display: grid;
    align-content: start;
    border: 5px solid var(--primary-pink);

    /* JavaScript can access this variable*/
    
    --column-number: 20;
    grid-template-columns: repeat(var(--column-number), minmax(40px, 300px));
}

.board .cell {
    background-color: var(--primary-orange);
    display: flex;
    align-items: center;
    justify-content: center;
    color: rgb(150, 0, 0);
    font-weight: 800;
    font-size: clamp(0.5rem, calc( 100cqw / var(--column-number) * 1.2/3 ), 2rem);
    aspect-ratio: 1 / 1;
}

